--- a/.github/workflows/update_covid_stats.yml
+++ b/.github/workflows/update_covid_stats.yml
@@ -6,6 +6,7 @@ on:
 
 jobs:
   build:
+    name: Profile Gist with COVID Russia Stats
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v1
